# zfec

./: .gitattributes  .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py  zfex.cabal
.github/: dependabot.yml
.github/workflows/: bench-macos-baseline.yml  build.yml  gen-py-artifacts.yml  haskell-api.yml  test-qemu.yml  test.yml  tools.yml  utests.yml
.github/workflows/lib/: gen-py-artifacts.yml
bench/: Makefile  README.rst  Results.rst  bench_zfec.c  bench_zfec.py  bench_zfex.c  runme.sh
bench/tools/: legacy_zfec.sh  plot_intel_k223_m55_43488.py  plot_intel_k7_m10_1M.py  zfex.sh
haskell/Codec/: ZFEX.hs
haskell/test/: FECTest.hs
zfec/: fec.c  fec.h  fec_pp.h  zfec_macros.h  zfec_pp.h
zfex/: __init__.py  __zfex.pyx  _version.py  _zfex.pyx  _zfex_status.pxi  _zfex_test.pyx  _zfexmodule.c  zfex.c  zfex.h  zfex_macros.h  zfex_status.h
zfex/test/: test_zfex.py
zfex/utests/: CMakeLists.txt
zfex/utests/tests/: .gitignore  CMakeLists.txt
zfex/utests/tests/src/: test_encode_decode.cpp
