Cabal-Version:   2.2
name:            zfex
version:         0.1.1
license:         GPL-2.0-or-later
license-file:    README.rst
author:          Adam Langley <agl@imperialviolet.org>
maintainer:      Adam Langley <agl@imperialviolet.org>, Wojciech Migda
description:     This code, based on zfex by Migda, based on zfec by Zooko,
                 based on code by Luigi Rizzo implements an erasure code, or forward error
                 correction code. The most widely known example of an erasure
                 code is the RAID-5 algorithm which makes it so that in the
                 event of the loss of any one hard drive, the stored data can
                 be completely recovered.  The algorithm in the zfec package
                 has a similar effect, but instead of recovering from the loss
                 of only a single element, it can be parameterized to choose in
                 advance the number of elements whose loss it can tolerate.
homepage:        https://github.com/WojciechMigda/zfex
synopsis:        Forward error correction of ByteStrings
category:        Codec
stability:       provisional
tested-with:     GHC == 6.8.2
                 , GHC == 6.8.5
                 , GHC == 9.2.2
extra-source-files:
                 zfex/zfex.h,
                 zfex/zfex_pp.h, zfex/zfex_macros.h, zfex/zfex_bytemask.h, zfex/zfex_status.h,
                 haskell/Codec/ZFEXStatus.chs,
                 COPYING.GPL, COPYING.TGPPL.rst

Library
    build-type:      Simple
    hs-source-dirs:  haskell
    build-depends:   base, bytestring>=0.9
    exposed-modules: Codec.ZFEX
    other-modules:   Codec.ZFEXStatus
    ghc-options:     -Wall -v
    c-sources:       zfex/zfex.c
    x-extra-c2hs-options: --cppopts=-Izfex
    include-dirs:    zfex
    extensions:      ForeignFunctionInterface
    if !os(windows)
      cc-options:    -std=c99

Test-Suite quickcheck-tests
    type:       exitcode-stdio-1.0
    hs-source-dirs:
                haskell/test
    main-is:    ZFEXTest.hs
    build-depends:
                base
                , bytestring>=0.9
                , QuickCheck
                , random
                , zfex

source-repository head
  type:     git
  location: https://github.com/WojciechMigda/zfex.git
